fix(pom): add plugins to annotationProcessor and fix the pom.xml